# computational_intelligence_2223

genetic_algorithm_from_scratch/: main.py
lab01/: README.md  breadthfirst.md  gx_utils.py  lab01.ipynb
lab1/: README.md  greedy.md  lab01.ipynb  pyproject.toml
lab2/: 1000.txt  500.txt  lab2.ipynb  one-max.ipynb  pyproject.toml  readme.md
lab3/: README.md  lab3_nim.ipynb
lab3/RL maze/: Maze.py  RLAgent.py  main.py  pyproject.toml
