[tool.poetry]
name = "lab01fdg"
version = "0.1.0"
description = "first lab of computational intelligence"
authors = ["Francesco Di Gangi <francesco.digangi2801@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
