[tool.poetry]
name = "lab2"
version = "0.1.0"
description = "Lab 2, set covering with GA"
authors = ["Francesco Di Gangi <francesco.digangi2801@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
